<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="me">Me</string>
    
    <string name="connecting_facebook">Connecting Facebook</string>
    <string name="facebook_login">Facebook Login</string>
           
    <string name="app_name">SimpleFeed</string>
    <string name="app_desc">Fast and Simple Facebook Feed.</string>
        
	<string name="sharing">Sharing</string>
	<string name="shared">Shared</string>
	<string name="commented">Commented</string>
	<string name="updated">Updated</string>
	<string name="liked">Liked</string>
	<string name="share_app_message">Liking this Facebook app on Android</string>
	
	<string name="wall">Wall</string>
	<string name="news">News</string>  
	<string name="status">Status</string>  
	<string name="settings">Settings</string>    
	
	<string name="connection_failed">Connection Failed</string>
	<string name="retry">Retry</string>
	<string name="refresh">Refresh</string>
	
	<string name="status_update">Status Update</string> 
	<string name="comment">Comment</string> 
	<string name="send">Send</string> 
	<string name="cancel">Cancel</string>  
	
	    
	<string name="share">Share</string> 
	<string name="share_app_sum">Share this app</string> 
	<string name="review">Review</string> 
	<string name="review_app_sum">Review this app</string> 
	<string name="logout">Logout</string> 
	<string name="logout_sum">Logout Facebook</string>    
    <string name="version">Version</string>   
    
    <string name="feedback">Feedback</string>
    <string name="comments">comments</string> 
    <string name="sending">Sending</string>
    
    <string name="p_no_content">No Content</string>
            
    <string name="like">Like</string> 
    <string name="see_comments">See Comments</string>     
    <string name="report_problem">Report Problem</string>  
    <string name="report_problem_sum">Send report to developer</string>     
    <string name="send_email">Send Email</string> 
        
    <string name="photo">Photo</string> 
    <string name="no_permission">Permission Denied</string> 
    <string name="discuss">Discuss / Feature Request</string>
    
    <string name="view_photo">View Photo</string>
    <string name="view_web">Open Webpage</string>    
    <string name="play_video">Play Video</string>
    
    <string name="done">Done</string>
    <string name="pending_upload">Photo will be uploaded.</string>
        
    <string name="upload_failed">Upload Failed</string>    
    <string name="photo_upload">Photo Upload</string> 
    <string name="upload_completed">Upload Completed</string> 
    <string name="no_sd">No SD Card</string> 
    
    <string name="photo_album">Photo Album</string> 
    <string name="delete">Delete</string>
    
    <string name="marked_read">Marked as Read</string>    
        
    <string name="n_friends">Friends</string>
    <string name="n_movies">Movies</string>
    <string name="n_likes">Likes</string>
    <string name="n_music">Music</string>
    <string name="n_books">Books</string>
    <string name="n_notes">Notes</string>
    <string name="n_videos">Videos</string> 
    <string name="n_events">Events</string> 
    <string name="n_groups">Groups</string> 
    <string name="n_checkins">Checkins</string>  
    <string name="n_locations">Locations</string>  
    <string name="n_notifications">Notifications</string>  
    
    <string name="v_search">Search</string>
    <string name="enable_gps">Enable GPS</string>
    
    <string name="n_sso">Single Sign On</string>
    <string name="p_sso_sum">Use device account to sign on</string>
    <string name="p_location_update">Location update</string>   
        
    <string name="other_data">Other Info</string>     
</resources>