<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
    <item android:id="@+id/mode"
          android:icon="@drawable/ic_menu_view"
          android:title="@string/wall" />
    
    <item android:id="@+id/refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/refresh" 
          android:showAsAction="always|withText"
          android:actionLayout="@layout/action_refresh"
          />
    
    <item android:id="@+id/status"
          android:icon="@drawable/ic_menu_edit"
          android:title="@string/status" />
    
    <item android:id="@+id/all_data"
          android:icon="@drawable/ic_menu_moreoverflow"
          android:title="@string/other_data" />
    
    <!--  
    <item android:id="@+id/photo"
          android:icon="@drawable/ic_menu_camera"
          android:title="@string/photo" />
    -->
    
    <item android:id="@+id/settings"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/settings" 
          />  
    
    <item android:id="@+id/debug"
          android:icon="@drawable/ic_menu_preferences"
          android:title="Debug" 
          />      
</menu>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
